fix gap

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,4 +5,5 @@
 .main {
 	flex: 1;
 	padding: 32px;
+	gap: 32px;
 }
